@@ -1887,9 +1887,14 @@ define_final(argc, argv, os)
 		 rb_obj_classname(block));
     }
     need_call_final = 1;
-    FL_SET(obj, FL_FINALIZE);
+    if (!FL_ABLE(obj)) {
+	rb_raise(rb_eArgError, "cannot define finalizer for %s",
+		 rb_obj_classname(obj));
+    }
+    RBASIC(obj)->flags |= FL_FINALIZE;
 
     block = rb_ary_new3(2, INT2FIX(ruby_safe_level), block);
+    OBJ_FREEZE(block);
 
     if (!finalizer_table) {
 	finalizer_table = st_init_numtable();
@@ -1898,7 +1903,9 @@ define_final(argc, argv, os)
 	rb_ary_push(table, block);
     }
     else {
-	st_add_direct(finalizer_table, obj, rb_ary_new3(1, block));
+	table = rb_ary_new3(1, block);
+	RBASIC(table)->klass = 0;
+	st_add_direct(finalizer_table, obj, table);
     }
     return block;
 }
